src/objects/JobOpening__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>企業</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>人材募集</relationshipLabel>
        <relationshipName>JobOpening</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IsValid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>有効</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>概要</label>
        <type>TextArea</type>
    </fields>
    <label>人材募集</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>人材募集 タイトル</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>